fix: collection 불변 리스트 -> 수정 가능한 리스트로 변경